--- a/.env copy
+++ b/.env copy
@@ -1,7 +1,9 @@
 DEBUG=1
 PYTHONUNBUFFERED=1
-SECRET_KEY=supersegreto
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+SECRET_KEY=''
+DJANGO_ALLOWED_HOSTS=0.0.0.0,localhost,127.0.0.1
 POSTGRES_DB=sticky_notes
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=stefanopostgresql
+DB_HOST=10.0.2.2
+DB_PORT=5433
