--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,14 @@ services:
       - ./backend:/app
     working_dir: /app
     ports:
-      - "8000:8000"
+      - '8000:8000'
     env_file:
       - .env
     depends_on:
       - db
+    networks:
+      sticky_net:
+        ipv4_address: 172.25.0.10
   db:
     image: postgres:15
     container_name: postgres_db
@@ -20,5 +23,15 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    networks:
+      sticky_net:
+        ipv4_address: 172.25.0.5
 volumes:
   pgdata:
+
+networks:
+  sticky_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.25.0.0/24
