--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,38 +1,42 @@
-# Stage 1: Build React + TypeScript App
-FROM node:18-slim AS build
 
-# Imposta cartella di lavoro
+# Stage 1: Build React application
+FROM node:18-alpine AS build
+
+# Set working directory
 WORKDIR /app
 
-# Copia solo i file necessari per installare le dipendenze
+# Copy package manifests
 COPY package.json yarn.lock ./
 
-# Installa le dipendenze (usa npm anche se c'è yarn.lock, per aggirare peerDeps)
+# Install dependencies using npm to avoid peerDeps issues
 RUN npm install --legacy-peer-deps
 
-# Copia solo i file sorgente necessari
-COPY public ./public
-COPY src ./src
-COPY tsconfig.json ./
-#COPY .env ./
+# Copy all source files
+COPY . .
 
-# Costruisce l'app (React crea la cartella `build`)
+# Ensure compatible AJV version for building
+RUN npm install ajv@6.12.6 ajv-keywords@3.5.2 --legacy-peer-deps
+
+# Build React application
 RUN npm run build
 
-# Stage 2: Serve con NGINX
+# Stage 2: Serve static files with Nginx
 FROM nginx:stable-alpine
 
-# Pulisce HTML default di NGINX
+# Remove default Nginx content
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copia i file della build React dalla fase precedente
+# Copia il default.conf personalizzato
+COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+
+# Copy built assets from build stage
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Espone la porta 80
+# Expose port for HTTP
 EXPOSE 80
 
-# Riduce i log a output minimo
-ENV NGINX_ENTRYPOINT_QUIET_LOGS=1
+# Quiet Nginx entrypoint logs
+#ENV NGINX_ENTRYPOINT_QUIET_LOGS=1
 
-# Comando finale
+# Launch Nginx in foreground
 CMD ["nginx", "-g", "daemon off;"]
